fix header ul z-index 999

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -137,6 +137,7 @@
         background-repeat:no-repeat;
         background-position: center;
         background-size: cover;
+        z-index: 999;
         li{
             line-height: 40px;
             margin: 30px 0;
